--- a/webrtc-chat-client/nginx.conf
+++ b/webrtc-chat-client/nginx.conf
@@ -54,8 +54,8 @@ http {
 
         # reverse proxy
         location / {
-            root /app;
-            try_files $uri /index.html;
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
             proxy_http_version 1.1;
             #proxy_pass http://websocket;
             proxy_set_header Upgrade $http_upgrade;
